--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             <a href="#">linkedin</a>
         </div>
 
-        <div class="credit">created by <span> mr. web designer </span> | all rights reserved</div>
+        <div class="credit">created by <span> Lakshya Mehrishi </span> | all rights reserved</div>
 
     </div>
 
